add support to extract pointwise log-likelihood

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(check_model)
 export(fit_model)
 export(get_posterior)
 export(get_seed)
+export(log_lik)
 export(plot_counts_obs)
 export(plot_counts_pred)
 export(plot_counts_pred_obs)
@@ -14,5 +15,6 @@ export(predict_counts)
 export(prepare_data)
 export(stancode)
 import(cmdstanr)
+importFrom(posterior,as_draws)
 importFrom(rlang,"!!!")
 importFrom(rlang,parse_exprs)
